# Interviews

./: .gitignore  README.md
avito_test/: CMakeLists.txt  file.cpp  file.hpp  main.cpp
bomber_man/: CMakeLists.txt  abstract_bomber_man.cpp  abstract_bomber_man.hpp  abstract_resolver.cpp  abstract_resolver.hpp  bfs_bomber_man.cpp  bfs_bomber_man.hpp  dfs_bomber_man.cpp  dfs_bomber_man.hpp  island_counter.cpp  island_counter.hpp  main.cpp  plumber_resolver.cpp  plumber_resolver.hpp
boox/: CMakeLists.txt  area.h  cell_addr.h  cell_value.h  enums.h  exception.h  forest.h  format.h  fwd.h  fx_ast.h  fx_engine.h  fx_function.h  fx_operand.h  fx_parser.h  node.h  range.h  range_op.h  scoped_transaction.h  value_format.h  vector_2d.h  workbook.h  worksheet.h
boox/src/: area.cpp  base26.h  cell_addr.cpp  cell_op.cpp  cell_op.h  cell_value.cpp  column_op.cpp  column_op.h  fx_engine.cpp  range.cpp  range_op.cpp  row_op.cpp  row_op.h  scoped_transaction.cpp  value_format.cpp  value_parser.cpp  value_parser.h  workbook.cpp  worksheet.cpp
boox/ut/: CMakeLists.txt  area.cpp  base26.cpp  cell_addr.cpp  criteria_parser.cpp  fx.cpp  main.cpp  range.cpp  value_format.cpp  vector_2d.cpp
simple_hash/: CMakeLists.txt  main.cpp
testArgus/: CMakeLists.txt
testArgus/project/: CMakeLists.txt  main.cpp
testArgus/project/controller/: controller.cpp  controller.hpp
testArgus/project/openc_cv_module/: open_cv.hpp
testArgus/project/opencv_module/: opencv_module.cpp  opencv_module.hpp
testGeoSoft/: DJSon.hpp  TestQML.pro  connector.cpp  connector.hpp  controller.cpp  controller.hpp  jsonModel.cpp  jsonModel.hpp  main.cpp  main.qml  sockets.cpp  sockets.hpp
testKronshtadt/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
testNTProgress/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Converter.cpp  Converter.hpp  RPNConverter.cpp  RPNConverter.hpp  main.cpp  option.hpp
testNTProgress/calculator/: Calculator.cpp  Calculator.hpp
testNTProgress/converter/: Converter.cpp  Converter.hpp
testNTProgress/test/: CMakeLists.txt  main_test.cpp
testRevoLLC/: CMakeLists.txt  main.cpp  work.txt
testRevoLLC/Commander/: commander.cpp  commander.hpp
testRevoLLC/Haffman/: haffman.cpp  haffman.hpp  haffman_decode.cpp  haffman_decode.hpp  haffman_encode.cpp  haffman_encode.hpp  haffman_node.cpp  haffman_node.hpp  hafman.cpp
testRevoLLC/option/: BitReader.cpp  BitReader.hpp  BitWriter.cpp  BitWriter.hpp  bitWriter.hpp  option.cpp  option.hpp
testWork/: CMakeLists.txt  boost_asio_test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
testWork2/: CMakeLists.txt  testWork.cpp  testWork35.cpp
